--- a/styles.css
+++ b/styles.css
@@ -4,228 +4,275 @@
     box-sizing: border-box;
   }
   
+  h1 {
+    margin-right: 70%;
+    font-size: 20px;
+    margin-left: 20px;
+  }
+  
   body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     height: 100vh;
     background-color: rgb(36, 45, 52);
     font-family: Arial, sans-serif;
+    padding-top: 50px; /* Asegura que el contenido no se solape con el navbar */
   }
   
-  .container {
-    display: flex;
-    flex-direction: column; /* Colocar los elementos en columna */
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .header {
+  .div-header {
+    background-color: #000000;
+    color: white;
+    padding: 10px 0;
     text-align: center;
-    margin-bottom: 20px; /* Añadir un espacio entre "HOLA" y el formulario */
-  }
-  
-  .header h1 {
-    color: rgb(234, 201, 13);
-    font-size: 20px;
-  }
-  
-  .login-box {
-    background: #fff;
-    padding: 40px;
-    border-radius: 10px;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
-    width: 300px;
-    margin-bottom: 100px;
-  }
-  
-  h2 {
-    margin-bottom: 20px;
-    text-align: center;
-    color: #333;
-  }
-  
-  .user-box {
-    position: relative;
-    margin-bottom: 30px;
-  }
-  
-  .user-box input {
     width: 100%;
-    padding: 10px 0;
-    font-size: 16px;
-    color: #333;
-    margin-bottom: 0px;
-    border: none;
-    border-bottom: 1px solid #333;
-    outline: none;
-    background: transparent;
-  }
-  
-  .user-box label {
-    position: absolute;
-    top: 0;
-    left: 0;
-    padding: 10px 0;
-    font-size: 16px;
-    color: #666;
-    pointer-events: none;
-    transition: 0.3s;
-  }
-  
-  .user-box input:focus ~ label,
-  .user-box input:valid ~ label {
-    top: -20px;
-    left: 0;
-    color: #333;
-    font-size: 12px;
-  }
-  
-  .button-box {
-    align-items: center;
-    text-align: center;
-  }
-  
-  .btn {
-    background-color: #4CAF50;
-    border: none;
-    padding: 10px 20px;
-    color: white;
-    cursor: pointer;
-    border-radius: 5px;
-    transition: background-color 0.3s ease;
-    width: 95%;
-  }
-  
-  .btn:hover {
-    background-color: #45a049;
-  }
-  
-  
-  
-  
-  .show-password-container {
+    position: fixed; /* Posiciona el div en la parte superior */
+    top: 0; /* Asegura que el div esté en la parte superior */
+    left: 0; /* Asegura que el div cubra todo el ancho */
+    z-index: 1000; /* Para que el div esté por encima de otros elementos */
     display: flex;
-    align-items: center;
-    margin-bottom: 5px;
-    color: #333;
-    font-size: 14px;
+    align-items: center; /* Alinea verticalmente */
+    justify-content: space-between; /* Alinea horizontalmente, espacio entre el h1 y el nav */
+    height: 60px; /* Opcional: puedes ajustar la altura según tus necesidades */
   }
   
-  
-  .show-password-container input[type="checkbox"] {
-    margin-top: 0;
-    margin-right: 10px;
-    margin-bottom: 5px;
-    cursor: pointer;
-    width: 15px;
-    height: 15px;
+  nav {
+    margin-left: auto; /* Para alinear el nav a la derecha */
+    margin-right: 10px; /* Ajusta este valor si quieres mayor separación del borde */
   }
-  
-  .show-password-container label {
-    margin-bottom: 5px;
-  
-    cursor: pointer;
-    color: #666;
-  }
-  
-  .show-password-container input[type="checkbox"]:checked + label {
-    color: #4CAF50; /* Cambia el color al marcar el checkbox */
-  }
-
-
-
-
-  
-  header {
-    background-color: #333;
-    color: white;
-    padding: 3px 0;
-    text-align: center;
-  }
-  
   nav ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
     display: flex;
-    justify-content: center;
-    background-color: #444;
+    justify-content: flex-end; /* Alinea los elementos del ul hacia la derecha */
   }
   
   nav ul li {
+    margin-left: 25px;
+    margin-right: 5px¿;
+    padding-left: 5px;
+    color: white;
     padding: 10px 0; /* Ajusta este valor para cambiar el grosor vertical */
-    width: 9%;
+    width: auto; /* Se adapta al contenido */
+    padding: 5px; /* Espacio dentro del borde */
     text-align: center;
+    display: flex;
+    align-items: center; /* Alinea verticalmente */
+    justify-content: space-between; /* Alinea horizontalmente, espacio entre el h1 y el nav */
+  
+    /* border: 2px solid white; /* Agrega un borde negro con grosor de 2px */
   }
   
-  nav ul li a {
-    display: flex;
+  a {
     color: white;
     text-decoration: none;
-    align-items: center; /* Centra verticalmente */
-    justify-content: center;
-
   }
   
-
-  .hamburger {
-    position: absolute;
-    top: 14px;
-    right: 5px;
-    background: none;
+  span {
+    margin-right: 10px;
+    padding-bottom: 2px;
+  }
+  
+  .div-key,
+  .div-change {
+    display: flex; /* Usamos Flexbox */
+    justify-content: center; /* Centrado horizontal */
+    align-items: center; /* Centrado vertical */
+    margin-top: 100px;
+  }
+  
+  .div-key-intern {
+    text-align: center; /* Centra el texto dentro del div */
+    color: white;
+    width: 100%;
+  }
+  
+  p {
+    margin-top: 10px;
+  }
+  .div-final {
+    position: fixed; /* Posición fija en la pantalla */
+    bottom: 0; /* Coloca el div en la parte inferior de la pantalla */
+    left: 0; /* Alinea el div a la izquierda */
+    width: 100%; /* Hace que el div ocupe todo el ancho de la ventana */
+    background-color: rgb(36, 52, 64);
+    color: white; /* Color del texto */
+    text-align: center; /* Centrado del texto */
+    padding: 40px;
+  }
+  
+  .change {
+    font-size: 15px;
+    height: 25px;
+    width: 70px;
+    margin: 5px;
+    background-color: rgb(54, 230, 54);
+    color: white; /* Color del texto */
+    border: none; /* Sin borde */
+    text-decoration: none;
+    border-radius: 2px; /* Bordes redondeados */
+  }
+  
+  .change:hover {
+    background-color: rgb(10, 97, 10);
+  }
+  
+  #cerrar:hover {
+    background-color: rgb(34, 36, 34);
+  }
+  
+  
+  @media (max-width: 1024px) {
+    h1 {
+      width: 40%;
+      margin-right: 10%;
+      margin-left: 30%;
+    }
+  }
+  
+  @media (max-width: 768px) {
+    a {
+      display: none;
+    }
+    
+    .change {
+      width: 70%;
+  
+    }
+  }
+  
+  
+  @media (min-width: 768px) and (max-width: 768px) {
+    .change {
+      width: 120px;
+  
+    }
+  }
+  
+  #changeBox {
+    background: #1c1c1c;
+    padding: 40px;
+    padding-bottom: 10px;
+    border-radius: 8px;
+    box-shadow: 0 10px 25px rgba(0, 0, 0, 0.1);
+    max-width: 400px;
+    width: 100%;
+  }
+  .key-box {
+    position: relative;
+    margin-bottom: 30px;
+  }
+  .key-box input {
+    width: 100%;
+    padding: 10px 0;
+    font-size: 16px;
+    color: #fff;
+    margin-bottom: 30px;
     border: none;
-    color: rgb(251, 184, 17);
-    font-size: 25px;
-    cursor: pointer;
+    border-bottom: 2px solid #fff;
+    outline: none;
+    background: transparent;
+  }
+  .key-box input:focus {
+    border-bottom: 2px solid #3498db;
+  }
+   #etiqueta1 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 10px 0;
+    font-size: 16px;
+    color: #fff;
+    pointer-events: none;
+    transition: 0.5s;
+  }
+  .key-box #id-actual-key:focus ~ #etiqueta1,
+  .key-box #id-actual-key:valid ~ #etiqueta1 {
+    top: -20px;
+    left: 0;
+    color: #3498db;
+    font-size: 12px;
   }
   
+  
+  
+  #etiqueta2 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    padding: 80px 0;
+    font-size: 16px;
+    color: #fff;
+    pointer-events: none;
+    transition: 0.5s;
+  }
+  .key-box #id-new-key:focus ~ #etiqueta2,
+  .key-box #id-new-key:valid ~ #etiqueta2{
+    top: -20px;
+    left: 0;
+    color: #3498db;
+    font-size: 12px;
+  }
+  .key-box input::placeholder {
+    color: #bbb;
+    opacity: 0.5;
+  }
+  
+  .btn-cancel,
+  .btn-update {
+    display: inline-block;
+    padding: 10px 30px;
+    font-size: 16px;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s, transform 0.2s;
+    text-align: center;
+    width: 100%;
+    margin-bottom: 10px;
+  }
+  
+  .btn-cancel:hover,
+  .btn-update:hover {
+    background-color: #2980b9;
+    transform: translateY(-2px);
+  }
+  
+  
+  .btn-update{
+    background-color: #1fa604;
+  
+  }
+  
+  .btn-cancel{
+    background-color: #3498db;
+  
+  }
+  
+  .btn-update:hover{
+    background-color: #156804;
+  
+  }
+  
+  .btn-cancel:hover{
+    background-color: #00406b;
+  }
+  
+  
+  #id-div-change{
+    display: flex;
+    text-align: center;
+    align-items: center;
+  }
+  
+  
+  #typeChange, #actualKey{
+    color: white;
+    margin-bottom: 20px;
+  }
+
+
+
+
 
   
   
-
-  
-.dropdown-menu {
-  display: none;
-  position: absolute;
-  top: 50px;
-  right: 20px;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  z-index: 1000;
-  min-width: 150px;
-  border-radius: 8px;
-}
-
-.dropdown-menu a {
-  display: block;
-  padding: 10px;
-  text-decoration: none;
-  color: #333;
-  border-bottom: 1px solid #eee;
-  border-radius: 8px;
-
-}
-
-.dropdown-menu a:hover {
-  background-color: #f0f0f0;
-}
-
-.dropdown-menu a:last-child {
-  border-bottom: none;
-}
-
-
-.showAnswer:hover{
-  background-color: rgb(255, 253, 124);
-
-}
-
-
-
-
-
-
-
-
